--- a/projet_lem_in/Makefile
+++ b/projet_lem_in/Makefile
@@ -6,12 +6,15 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2019/06/05 20:38:22 by lcabanes         ###   ########.fr        #
+#    Updated: 2019/06/08 17:30:23 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CFLAGS	+=		-Wall -Wextra -Werror
-CFLAGS	+=		-I./ -I./libft/includes/
+CFLAGS =	-Wall -Wextra -Werror
+CPPFLAGS =	-I./ -I./libft/includes/
+LDFLAGS =	-L./libft/
+LDLIBS =	-lft
+
 #CFLAGS	+=		-O1 -g -fsanitize=address \
 #				-fno-omit-frame-pointer \
 #				-fsanitize-address-use-after-scope
@@ -20,64 +23,56 @@ HEAD = lem_in.h
 
 NAME = lem-in
 
-SRCS = ./srcs_lem_in/main_lem_in.c\
-		./srcs_lem_in/ft_options.c\
-		./srcs_lem_in/li_options.c\
-		./srcs_lem_in/li_error.c\
-		./srcs_lem_in/li_get_output.c\
-		./srcs_lem_in/li_parse_input.c\
-		./srcs_lem_in/ft_is_int.c\
-		./srcs_lem_in/li_match_ants.c\
-		./srcs_lem_in/li_match_rooms.c\
-		./srcs_lem_in/li_allocate_map.c\
-		./srcs_lem_in/li_match_pipes.c\
-		./srcs_lem_in/li_shorten_map_pipes.c\
-		./srcs_lem_in/li_print_map.c\
-		./srcs_lem_in/li_bellman_ford.c\
-		./srcs_lem_in/li_bhandari.c\
-		./srcs_lem_in/li_build_routes.c\
-		./srcs_lem_in/li_remove_edges.c\
-		./srcs_lem_in/li_get_routes_lengths.c\
-		./srcs_lem_in/li_eval_routes.c\
-		./srcs_lem_in/li_size_ttoa.c\
-		./srcs_lem_in/li_move_ants.c\
-		./srcs_lem_in/li_display_steps.c\
-		./srcs_lem_in/li_memory_liberator.c
+SRC_PATH = ./srcs_lem_in
 
-OBJS = ./main_lem_in.o\
-		./ft_options.o\
-		./li_options.o\
-		./li_error.o\
-		./li_get_output.o\
-		./li_parse_input.o\
-		./ft_is_int.o\
-		./li_match_ants.o\
-		./li_match_rooms.o\
-		./li_allocate_map.o\
-		./li_match_pipes.o\
-		./li_shorten_map_pipes.o\
-		./li_print_map.o\
-		./li_bellman_ford.o\
-		./li_bhandari.o\
-		./li_build_routes.o\
-		./li_remove_edges.o\
-		./li_get_routes_lengths.o\
-		./li_eval_routes.o\
-		./li_size_ttoa.o\
-		./li_move_ants.o\
-		./li_display_steps.o\
-		./li_memory_liberator.o
+SRC_NAME = main_lem_in.c\
+			ft_is_int.c\
+			ft_options.c\
+			li_options.c\
+			li_error.c\
+			li_get_output.c\
+			li_parse_input.c\
+			li_match_ants.c\
+			li_match_rooms.c\
+			li_allocate_map.c\
+			li_match_pipes.c\
+			li_shorten_map_pipes.c\
+			li_print_map.c\
+			li_bellman_ford.c\
+			li_bhandari.c\
+			li_build_routes.c\
+			li_remove_edges.c\
+			li_get_routes_lengths.c\
+			li_eval_routes.c\
+			li_size_ttoa.c\
+			li_move_ants.c\
+			li_display_steps.c\
+			li_memory_liberator.c
+
+SRC = $(addprefix $(SRC_PATH)/,$(SRC_NAME))
+
+OBJ_PATH = ./objs
+
+OBJ_NAME = $(SRC_NAME:.c=.o)
+
+OBJ = $(addprefix $(OBJ_PATH)/,$(OBJ_NAME))
 
 all: $(NAME)
 
-$(NAME): $(SRCS) $(HEAD)
+$(NAME): $(OBJ) $(HEAD) libft
+	gcc -o $(NAME) $(LDFLAGS) $(OBJ) $(LDLIBS)
+
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.c
+	@mkdir -p $(OBJ_PATH) > /dev/null
+	gcc -c -o $@ $(CFLAGS) $(CPPFLAGS) $<
+
+libft:
 	@make -C ./libft/ all
-	gcc -c $(CFLAGS) $(SRCS)
-	gcc -o $(NAME) $(CFLAGS) -L./libft/ $(OBJS) -lft
 
 clean:
 	@make -C ./libft/ clean
-	rm -f $(OBJS)
+	rm -f $(OBJ)
+	rm -df $(OBJ_PATH)
 
 fclean: clean
 	@make -C ./libft/ fclean
@@ -85,4 +80,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY	:				all clean fclean re
+.PHONY: all clean fclean re libft
