Ajout de commentaires dans le Makefile

--- a/projet_lem_in/Makefile
+++ b/projet_lem_in/Makefile
@@ -6,7 +6,7 @@
 #    By: lcabanes <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/11/07 19:50:49 by lcabanes          #+#    #+#              #
-#    Updated: 2019/06/08 17:30:23 by lcabanes         ###   ########.fr        #
+#    Updated: 2019/06/08 18:06:31 by lcabanes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,15 +15,15 @@ CPPFLAGS =	-I./ -I./libft/includes/
 LDFLAGS =	-L./libft/
 LDLIBS =	-lft
 
-#CFLAGS	+=		-O1 -g -fsanitize=address \
-#				-fno-omit-frame-pointer \
-#				-fsanitize-address-use-after-scope
+#CFLAGS +=	-O1 -g -fsanitize=address \
+#			-fno-omit-frame-pointer \
+#			-fsanitize-address-use-after-scope
 
-HEAD = lem_in.h
+HEAD = ./lem_in.h
 
 NAME = lem-in
 
-SRC_PATH = ./srcs_lem_in
+SRC_PATH = ./srcs_lem_in/
 
 SRC_NAME = main_lem_in.c\
 			ft_is_int.c\
@@ -49,20 +49,25 @@ SRC_NAME = main_lem_in.c\
 			li_display_steps.c\
 			li_memory_liberator.c
 
-SRC = $(addprefix $(SRC_PATH)/,$(SRC_NAME))
+SRC = $(addprefix $(SRC_PATH),$(SRC_NAME))
 
-OBJ_PATH = ./objs
+OBJ_PATH = ./objs/
 
 OBJ_NAME = $(SRC_NAME:.c=.o)
 
-OBJ = $(addprefix $(OBJ_PATH)/,$(OBJ_NAME))
+OBJ = $(addprefix $(OBJ_PATH),$(OBJ_NAME))
 
 all: $(NAME)
 
 $(NAME): $(OBJ) $(HEAD) libft
 	gcc -o $(NAME) $(LDFLAGS) $(OBJ) $(LDLIBS)
 
-$(OBJ_PATH)/%.o: $(SRC_PATH)/%.c
+# 'mkdir' est appele lors de la compilation de chaque fichier source
+# en fichier objet, mais c'est une nessecite car une regle ne peut pas
+# etre appelee par une autre regle autrement qu'en temps que dependance
+# Il est necessaire d'employer l'option '-o' de 'gcc' pour que les fichiers
+# objets se placent dans le repertoire '$(OBJ_PATH)'
+$(OBJ_PATH)%.o: $(SRC_PATH)%.c
 	@mkdir -p $(OBJ_PATH) > /dev/null
 	gcc -c -o $@ $(CFLAGS) $(CPPFLAGS) $<
 
