--- a/projet_corewar/ft_asm/Makefile
+++ b/projet_corewar/ft_asm/Makefile
@@ -35,6 +35,8 @@ SRC_NAME = main_asm.c\
 			asm_putchar_output.c\
 			asm_put_header_output.c\
 			asm_parse_header.c\
+			asm_skip_spacing_chars.c\
+			asm_gnl.c\
 			asm_create_output_file.c\
 			asm_allocate_label_ref.c\
 			asm_liberate_memory.c\
