--- a/projet_corewar/ft_asm/Makefile
+++ b/projet_corewar/ft_asm/Makefile
@@ -35,7 +35,10 @@ SRC_NAME = main_asm.c\
 			asm_putchar_output.c\
 			asm_put_header_output.c\
 			asm_parse_header.c\
+			asm_get_label_declaration.c\
 			asm_parse_prog.c\
+			asm_parse_line.c\
+			asm_parse_instruction.c\
 			asm_putchar_prog.c\
 			asm_put_prog_output.c\
 			asm_skip_spacing_chars.c\
