--- a/projet_corewar/ft_asm/Makefile
+++ b/projet_corewar/ft_asm/Makefile
@@ -39,6 +39,7 @@ SRC_NAME = main_asm.c\
 			asm_parse_prog.c\
 			asm_parse_line.c\
 			asm_parse_instruction.c\
+			asm_parse_inst_arg.c\
 			asm_get_inst_op_code.c\
 			asm_putchar_prog.c\
 			asm_put_prog_output.c\
