--- a/projet_corewar/ft_asm/Makefile
+++ b/projet_corewar/ft_asm/Makefile
@@ -52,6 +52,7 @@ SRC_NAME = main_asm.c\
 			asm_create_output_file.c\
 			asm_allocate_label_ref.c\
 			asm_liberate_memory.c\
+			asm_ft_atoi.c\
 			asm_error_messages_01.c\
 			asm_error_messages_02.c\
 			asm_error_messages_03.c
